@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.3'
     id 'io.spring.dependency-management' version '1.1.6'
+    id("io.swagger.core.v3.swagger-gradle-plugin") version "2.2.25"
 }
 
 group = 'org.example'
@@ -33,6 +34,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0' // WebFlux 환경의 Swagger UI 의존성
+    implementation 'io.swagger.core.v3:swagger-core:2.2.10'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.10'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1' // javax.xml.bind 예외 해결을 위한 의존성 추가
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -53,4 +59,8 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootRun {
+    jvmArgs = ["--add-modules", "java.xml.bind"]
 }
